# ChangeLog for x11-misc/macopix
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/macopix/ChangeLog,v 1.11 2006/07/20 00:28:02 malc Exp $

  20 Jul 2006; <malc@gentoo.org> macopix-1.2.1.ebuild:
  Add ~amd64 - bug #140061

  09 Dec 2004; Mamoru KOMACHI <usata@gentoo.org> macopix-1.2.1.ebuild:
  Stable on x86 and ppc.

  06 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
  +files/macopix-1.2.1-gentoo.diff, macopix-1.2.1.ebuild:
  Fixed compile bug with gcc-3.4. Thanks to Chris Arepantis
  <ChrisArepantis@gmail.com>; bug #69482.

  30 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> -macopix-1.0.3.ebuild,
  macopix-1.0.4.ebuild, macopix-1.2.1.ebuild:
  HOMEPAGE and SRC_URI have been changed.

*macopix-1.2.1 (18 Oct 2004)

  18 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> +macopix-1.2.1.ebuild:
  Version bumped.

  04 Sep 2004; Thomas Matthijs <axxo@gentoo.org> macopix-1.0.3.ebuild,
  macopix-1.0.4.ebuild:
  fix depend syntax 58347

  15 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> macopix-1.0.4.ebuild:
  Marked as stable.

*macopix-1.0.4 (23 May 2004)

  23 May 2004; <usata@gentoo.org> macopix-1.0.3.ebuild, macopix-1.0.4.ebuild:
  Version bumped. Marked 1.0.3 stable.

  02 May 2004; David Holm <dholm@gentoo.org> macopix-1.0.3.ebuild:
  Added to ~ppc.

*macopix-1.0.3 (01 May 2004)

  01 May 2004; Mamoru KOMACHI <usata@gentoo.org> macopix-1.0.3.ebuild:
  Initial import. Thanks to Christopher Eineke <christopher.eineke@gmx.de>
  for submitting the ebuild. Closing bug #49568.
