@@ -14,18 +14,18 @@ DIST macopix-mascot-one-ja-1.00.tar.gz 207463 RMD160 bd772cff72265783c0cdca63667
 DIST macopix-mascot-pia2-ja-1.00.tar.gz 187213 RMD160 2fc201a1792e080948390ad1745467923ef2d020 SHA1 d10539f43bbb13fd904ad20b492368ce2911d096 SHA256 1612033fe3f1bb2ac6c3e9f1b1c97d9a0897ada366c6366354e2ad13d52b1f7c
 DIST macopix-mascot-triangle_heart-ja-1.00.tar.gz 304526 RMD160 1e0b8b77d19c4f8a6e8f6058b981e35ee0d1df14 SHA1 7f56da4c97a1c37053833d1a892b42ed14ba6d95 SHA256 11f081c487ea8d319f086894b7273135e4342502fb1dd1cc3749dccf2f7fd5d7
 DIST macopix-mascot-tsukihime-ja-1.00.tar.gz 604261 RMD160 70b486c505f42fe9829c1e776f804e1dc1e94201 SHA1 1b59ad8cf380c270033ee302fea77c19611aa6ad SHA256 ebdcf55b5b25af4a278f09ea0f08222e21e8fce7650311bc9e0c852b1881e480
-EBUILD macopix-1.0.4.ebuild 1656 RMD160 4c32dfade2001c0a16df857b0131f4e88879a4f5 SHA1 9c77ef266f2a81d0801501cf6c64a06360cf4391 SHA256 516775a3281ec99c93a898fca0067c5caa7f6f92e68f942fbcdf7154681b68da
-MD5 76b00c6b759e2f6a382474f4876df943 macopix-1.0.4.ebuild 1656
-RMD160 4c32dfade2001c0a16df857b0131f4e88879a4f5 macopix-1.0.4.ebuild 1656
-SHA256 516775a3281ec99c93a898fca0067c5caa7f6f92e68f942fbcdf7154681b68da macopix-1.0.4.ebuild 1656
-EBUILD macopix-1.2.1.ebuild 1791 RMD160 599f5ecff7740213d80f537f2c1e510c5cdd11a1 SHA1 fb063498aa39bc48e4e1e8bbfb1b53e4d4f8d04a SHA256 0b6649a58368e03f878ae4299ee70f10a1b5d2151e8c2503d6150c7f29c148d6
-MD5 fdb6ea45384a4b986cb83733656960f5 macopix-1.2.1.ebuild 1791
-RMD160 599f5ecff7740213d80f537f2c1e510c5cdd11a1 macopix-1.2.1.ebuild 1791
-SHA256 0b6649a58368e03f878ae4299ee70f10a1b5d2151e8c2503d6150c7f29c148d6 macopix-1.2.1.ebuild 1791
-MISC ChangeLog 1549 RMD160 8990b194777c03fda101a7e3364519151b45d892 SHA1 7465d4a9436b369d129531fff66b8f2c6ebb6769 SHA256 7f4902c6f73c56053f880cfc47dfed20c758f41291198ffec74eebc49a2a1bd6
-MD5 415cd6a4bf6cbfac76814658d68b3aa9 ChangeLog 1549
-RMD160 8990b194777c03fda101a7e3364519151b45d892 ChangeLog 1549
-SHA256 7f4902c6f73c56053f880cfc47dfed20c758f41291198ffec74eebc49a2a1bd6 ChangeLog 1549
+EBUILD macopix-1.0.4.ebuild 1553 RMD160 4001046678ce1af6c170c35f8948dc6246b4418e SHA1 1e0015237919904dc4a426b3ad5b5e7a58dd93cc SHA256 9a648e8f60e262f170af836232a536e47645340beb7739a75a20a279d8f49224
+MD5 3747c6ea5129b667d3e48118ff8bec05 macopix-1.0.4.ebuild 1553
+RMD160 4001046678ce1af6c170c35f8948dc6246b4418e macopix-1.0.4.ebuild 1553
+SHA256 9a648e8f60e262f170af836232a536e47645340beb7739a75a20a279d8f49224 macopix-1.0.4.ebuild 1553
+EBUILD macopix-1.2.1.ebuild 1688 RMD160 d5feaee0a9910392d8984c7c29ddf28917cf52f6 SHA1 1341ad2cc72d4175da9a60c1f090db3be90b43d3 SHA256 47ff726b7484fb6eff1a7baecdea7abf4888036a899ade932e86fc191c43a9ff
+MD5 22a8dcee295150241925c58611faa02c macopix-1.2.1.ebuild 1688
+RMD160 d5feaee0a9910392d8984c7c29ddf28917cf52f6 macopix-1.2.1.ebuild 1688
+SHA256 47ff726b7484fb6eff1a7baecdea7abf4888036a899ade932e86fc191c43a9ff macopix-1.2.1.ebuild 1688
+MISC ChangeLog 1676 RMD160 82b08ad3f5a171f11bc5f2ff3095442baae42948 SHA1 9684a4dacd90ba5b48c15ac9bf986ed78477e5c1 SHA256 14e4fb3f13d101ed6b22fea039468edf27d6265899120d77d9387560448e248f
+MD5 d09b98d11249fdd1b694012974ff876c ChangeLog 1676
+RMD160 82b08ad3f5a171f11bc5f2ff3095442baae42948 ChangeLog 1676
+SHA256 14e4fb3f13d101ed6b22fea039468edf27d6265899120d77d9387560448e248f ChangeLog 1676
 MISC metadata.xml 221 RMD160 b72d8e0df2b2daece5fcb2c5f684e90e10370f2f SHA1 58771ce3377eeee2ebf1bb8acdeaa0ba169e9342 SHA256 d253ce582fe350599cd2fa44bea0a00410ab63bf68129dafdb4cdfdf7a180ecf
 MD5 3ff31b5479b2a0244f5711fff3155aed metadata.xml 221
 RMD160 b72d8e0df2b2daece5fcb2c5f684e90e10370f2f metadata.xml 221
