@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/macopix
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/macopix/ChangeLog,v 1.11 2006/07/20 00:28:02 malc Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/macopix/ChangeLog,v 1.12 2006/09/01 17:29:07 genstef Exp $
+
+  01 Sep 2006; Stefan Schweizer <genstef@gentoo.org> macopix-1.0.4.ebuild,
+  macopix-1.2.1.ebuild:
+  drop gtk2, bug 106560
 
   20 Jul 2006; <malc@gentoo.org> macopix-1.2.1.ebuild:
   Add ~amd64 - bug #140061
